<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_layout"
    android:layout_width="300dp"
    android:layout_height="338dp"
    android:layout_gravity="center"
    android:background="@drawable/round_background"
    android:elevation="10dp"
    android:paddingTop="20dp"
    android:paddingHorizontal="24dp"
    android:paddingBottom="51dp">

    <TextView
        android:id="@+id/title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="top"
        android:text="@string/tituloEditando"
        style="@style/tituloPrincipal"
        app:layout_constraintBottom_toTopOf="@+id/shapeableImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ovo"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/observation_text"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

    <TextView
        android:id="@+id/nomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        style="@style/pequeno12"
        android:text="@string/nomeproduto"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/precoProduto"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
        app:layout_constraintTop_toBottomOf="@+id/title_edit" />

    <TextView
        android:id="@+id/precoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="32dp"
        android:text="@string/preco"
        android:textAlignment="textStart"
        style="@style/negrito14"
        app:layout_constraintBottom_toTopOf="@+id/observation_text"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView" />


    <TextView
        android:id="@+id/observation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Observação"
        style="@style/negrito12"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_background"
        android:backgroundTint="@color/marron12"
        android:padding="16dp"
        style="@style/pequeno12"
        app:layout_constraintBottom_toTopOf="@+id/btOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btCancelar"
        style="@style/negrito12"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/round_background"
        android:backgroundTint="@color/marron12"
        android:text="@string/textoVoltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btOk"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/round_background"
        android:backgroundTint="@color/marrom"
        android:text="@string/adicionar"
        android:textColor="@color/white"
        style="@style/negrito12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>